# realm-js

./: .clang-format  .dccache  .dir-locals.el  .dockerignore  .eslintignore  .eslintrc  .eslintrc.json  .github  .gitignore  .gitignore-revs  .gitmodules  .ignore  .prebuildrc  .prettierrc.js  .watchmanconfig  CHANGELOG.header.md  CHANGELOG.md  CHANGELOG.v10.md  CHANGELOG.v11.md  CHANGELOG.v12.md  CMakeLists.txt  COMPATIBILITY.md  COMPATIBILITY.v10.md  COMPATIBILITY.v11.md  CONTRIBUTING.md  DEPRECATION.md  Dockerfile  Dockerfile.android  Jenkinsfile  LICENSE  README.md  Realm.podspec  RealmJS.mm  RealmJS.podspec  SUPPORT.md  armhf.Dockerfile  binding.gyp  binding.gypi  contrib  debian-multiarch-arm.Dockerfile  (+37 more)
src/: .logger.hpp.swp  .npmignore  CMakeLists.txt  Info.plist  RJSArray.cpp  RJSArray.hpp  RJSList.cpp  RJSList.hpp  RJSObject.cpp  RJSObject.hpp  RJSObject.mm  RJSQuery.mm  RJSRealm.hpp  RJSRealm.mm  RJSResults.cpp  RJSResults.hpp  RJSResults.mm  RJSSchema.hpp  RJSSchema.mm  RJSUtil.hpp  RJSUtil.mm  RealmJS.h  RealmJS.mm  RealmJSCoreTests.h  RealmJSCoreTests.m  RealmRPC.cpp  RealmRPC.h  RealmRPC.hpp  RealmRPC.mm  binding_context.hpp  collection_notifications.cpp  collection_notifications.hpp  concurrent_deque.hpp  dictionary_schema.hpp  event_loop_dispatcher.hpp  index_set.cpp  index_set.hpp  js-init.cpp  js-list.cpp  js-list.hpp  (+71 more)
src/RealmJS.xcodeproj/: project.pbxproj
src/android/: CMakeLists.txt  com_reacttests_API.cpp  com_reacttests_API.h  com_reacttests_RealmReactAndroid.cpp  com_reacttests_RealmReactAndroid.h  hack.cpp  hack.hpp  io_realm_react_RealmReactAndroid.cpp  io_realm_react_RealmReactAndroid.h  io_realm_react_RealmReactModule.cpp  io_realm_react_RealmReactModule.h  jni_utils.cpp  jni_utils.hpp  jsc_override.cpp  platform.cpp
src/browser/: platform.cpp
src/common/: collection.hpp  js_logger.hpp  js_plain_object.hpp  mixed_type.hpp  plain_object.hpp  single.hpp  singleton.hpp  type_deduction.cpp  type_deduction.hpp  types.hpp  utils.h
src/dictionary/: dictionary_schema.hpp  js_dictionary.hpp
src/hermes/: CMakeLists.txt  hermes_class.hpp  hermes_function.hpp  hermes_init.cpp  hermes_init.h  hermes_init.hpp  hermes_object.hpp  hermes_protected.hpp  hermes_return_value.hpp  hermes_string.hpp  hermes_types.hpp  hermes_value.hpp
src/impl/: async_query.cpp  async_query.hpp  background_collection.cpp  background_collection.hpp  cached_realm.hpp  cached_realm_base.hpp  collection_change_builder.cpp  collection_notifier.cpp  list_notifier.cpp  list_notifier.hpp  realm_coordinator.cpp  realm_coordinator.hpp  results_notifier.cpp  transact_log_handler.cpp  transact_log_handler.hpp  weak_realm_notifier.hpp
src/ios/: CMakeLists.txt  RealmJS.h  RealmJS.mm  platform.mm
src/jsc/: CMakeLists.txt  js_compat.hpp  js_realm.cpp  js_realm.hpp  jsc_class.hpp  jsc_collection.cpp  jsc_collection.hpp  jsc_context.hpp  jsc_exception.hpp  jsc_externs.hpp  jsc_function.hpp  jsc_init.cpp  jsc_init.h  jsc_init.hpp  jsc_list.cpp  jsc_list.hpp  jsc_notification_map.hpp  jsc_object.hpp  jsc_object_accessor.cpp  jsc_object_accessor.hpp  jsc_protected.hpp  jsc_realm.cpp  jsc_realm.hpp  jsc_return_value.hpp  jsc_rpc_network_transport.hpp  jsc_string.hpp  jsc_types.hpp  jsc_util.hpp  jsc_value.cpp  jsc_value.hpp  rpc.cpp  rpc.hpp  types.hpp
src/jsi/: CMakeLists.txt  jsi_class.hpp  jsi_function.hpp  jsi_init.cpp  jsi_init.h  jsi_init.hpp  jsi_object.hpp  jsi_protected.hpp  jsi_return_value.hpp  jsi_string.hpp  jsi_types.hpp  jsi_value.hpp
src/lib-rpc/: base64.js  index.js  objects.js
src/node/: CMakeLists.txt  binding.gyp  build-node.sh  js_adapter.hpp  js_global_notifier.hpp  node_buffer.hpp  node_class.hpp  node_context.hpp  node_dummy.c  node_dummy.cpp  node_exception.hpp  node_function.hpp  node_init.cpp  node_init.hpp  node_napi_convert.hpp  node_network_transport.hpp  node_object.hpp  node_object_accessor.cpp  node_object_accessor.hpp  node_protected.hpp  node_return_value.hpp  node_string.hpp  node_sync_logger.cpp  node_sync_logger.hpp  node_type_deduction.hpp  node_types.hpp  node_uv_async.hpp  node_value.hpp  platform.cpp  sync_logger.cpp  sync_logger.hpp  weak_realm_notifier.cpp
src/object-store/: CMakeLists.txt  README.md  list.cpp  list.hpp  object_accessor.hpp  object_schema.cpp  object_store.cpp  object_store.hpp  property.hpp  results.cpp  results.hpp  schema.hpp  shared_realm.cpp  shared_realm.hpp
src/parser/: parser.cpp  parser.hpp  query_builder.cpp  query_builder.hpp
src/test/: .clang-format  .logger.cpp.swp  README.md  js_dictionary.cpp  jsc_object.js  logger.cpp  main.cpp  main_testing.cpp  test.sh  test_bed.hpp  testing
src/util/: format.cpp
tests/: .eslintrc  .eslintrc.json  .gitignore  .npmignore  ArrayTests.js  CMakeLists.txt  GrammarTests.mm  GrammerTests.mm  ObjectTests.js  QueryTests.js  RJSModuleLoader.h  RJSModuleLoader.m  RealmJSCoreTests.m  RealmJSTests.h  RealmJSTests.mm  RealmTests.js  ResultsTests.js  TestCase.js  TestObjects.js  asserts.js  base-test.js  collection_change_indices.cpp  index.js  index_set.cpp  list.cpp  main.cpp  migrations.cpp  package-lock.json  package.json  parser.cpp  queryTests.json  realm-bundle.realm.backup-log  realm.cpp  results.cpp  schema.cpp  schemas.js  transaction_log_parsing.cpp  tsconfig.json  util.js
tests/Demo/: index.ios.js  package.json
tests/ReactTestApp/: App.android.js  App.ios.js  app.json  metro.config.js  package-lock.json  package.json  run-android.sh
tests/ReactTests/: index.ios.js  package.json
tests/data/: dates-v3.realm  dates-v5.realm  realm-bundle.realm  sync-v1.realm
tests/electron/: README.md  package-lock.json  package.json  runner.js  spec.js
tests/install-test/: App.js  wait-for-app.js
tests/ios/: GrammarTests.mm  RJSModuleLoader.h  RJSModuleLoader.m  RealmJSCoreTests.m  RealmJSTests.h  RealmJSTests.mm
tests/js/: .eslintrc.json  adapter-tests.ts  admin-user-helper.js  alias-tests.js  analytics-tests.js  app-tests.js  array-buffer-tests.js  asserts.js  async-tests.js  binary-data-tests.js  bson-tests.js  collection-notification-tests.js  compute-size-tests.js  index.js  (+39 more)
(+2385 files in other folders)
